--- a/_posts/2024-03-18-first.md
+++ b/_posts/2024-03-18-first.md
@@ -6,3 +6,7 @@ title: "첫 포스팅입니다!"
 # 오늘 처음 블로그를 만들었습니다.
 
 앞으로 열심히 할게요. 
+
+
+
+![github_logo](C:\Users\sannc\OneDrive\문서\San-not-Sam.github.io\San-not-Sam-github-blog\San-not-Sam.github.io\images\2024-03-18-first\github_logo.png)
