--- a/_posts/2024-03-18-first.md
+++ b/_posts/2024-03-18-first.md
@@ -10,3 +10,5 @@ title: "첫 포스팅입니다!"
 
 
 ![github_logo](C:\Users\sannc\OneDrive\문서\San-not-Sam.github.io\San-not-Sam-github-blog\San-not-Sam.github.io\images\2024-03-18-first\github_logo.png)
+
+![Python-logo-notext.svg](C:\Users\sannc\OneDrive\문서\San-not-Sam.github.io\San-not-Sam-github-blog\San-not-Sam.github.io\images\2024-03-18-first\Python-logo-notext.svg.png)
