--- a/_posts/2024-03-18-first.md
+++ b/_posts/2024-03-18-first.md
@@ -8,6 +8,14 @@ typora-root-url: ../
 
 앞으로 열심히 할게요. 
 
+
+
+실시간으로 반영이 되나?
+
+
+
+
+
 ![github_logo](/images/2024-03-18-first/github_logo-1710806110355-1.png)
 
 ![Python-logo-notext.svg](/images/2024-03-18-first/Python-logo-notext.svg-1710806330492-3.png)
